--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-plugin-sass": "^2.3.3",
     "gatsby-plugin-sharp": "^2.6.9",
     "gatsby-plugin-transition-link": "^1.18.0",
+    "gatsby-source-contentful": "^2.3.15",
     "gatsby-source-filesystem": "^2.3.8",
     "gatsby-transformer-sharp": "^2.5.3",
     "gsap": "^3.3.1",
@@ -20,8 +21,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.0.0",
-    "react-pose": "^4.0.10"
+    "react-helmet": "^6.0.0"
   },
   "devDependencies": {
     "prettier": "2.0.5"
