--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-react-helmet": "^3.3.2",
     "gatsby-plugin-sass": "^2.3.3",
     "gatsby-plugin-sharp": "^2.6.9",
+    "gatsby-plugin-sitemap": "^2.4.11",
     "gatsby-plugin-transition-link": "^1.18.0",
     "gatsby-source-contentful": "^2.3.15",
     "gatsby-source-filesystem": "^2.3.8",
